Restore last Cart Dialog - bug for the alignment of No Thanks message

--- a/p4m-shared/p4m.scss
+++ b/p4m-shared/p4m.scss
@@ -2744,6 +2744,7 @@ p4m-register {
   .buttons {
     margin: 20px 0 0 0 !important;
     padding: 0 !important;
+    align-items: center;
     > div {
       height: 44px;
       margin: 0 9px;
